--- a/cheetsheets.html
+++ b/cheetsheets.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link href="styles.css" rel="stylesheet">
+    <link href="style.css" rel="stylesheet">
+    <title>Cheet Sheets</title>
   </head>
   <body>
     <heading>
