Web site değiştirildi

--- a/index.html
+++ b/index.html
@@ -1,10 +1,39 @@
-<html>
- 
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
+    <script src="main.js" defer></script>
+    <title>My Portfolio</title>
+</head>
 <body>
-  <h1>HAYDAR TEPE</h1>
-  <p>Welcome to my website!</p>
- <a href="cheetsheets.html">CheetSheets</a>
-  <img src="https://content.codecademy.com/articles/github-pages-via-web-app/happy-ice-cream.gif" />
+    <nav>
+        <div id="logo">
+        <img id="logo" src="./images/Purple and Black Neon Sci Fi Discord Logo.png"  alt="Site Logo" >
+
+        </div>
+        <ul>
+            <li>Projects</li>
+            <li>Contact</li>
+            <li>Skills</li>
+        </ul>
+    </nav>
+    <div id="whoami">
+        <img height="380px" src="./images/photo1691161903.jpeg" alt="programmer-image">
+        <div id="text"><h1 class="header">welcome!</h1>
+            <p id="welcome">"Hello there! Welcome to my portfolio page. Here, I'm sharing the projects where I bring my creative ideas to life through code. With my passion for technology and a continuous desire to learn, I'm constantly pushing myself to improve with each project. If you're interested in joining me on this journey, feel free to explore my projects. Enjoy your stay!"</p>
+        </div>
+    </div>
+    <div id="quote"><p class="main-quote">
+        Quality is not an act, it is a habit.
+    </p>
+<p class="author">Aristotle</p></div>
+<footer>
+    <a href="#" class="contact">Contact Me</a>
+</footer>
+<p id="madewith">Made with <span style="color: red;">♥</span> in Çamdibi</p>
+
+    
 </body>
- 
 </html>
